// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day #render renders <Day /> 1`] = `
<div
  className="calendar-day"
  onClick={[Function]}
  onMouseMove={[Function]}
>
  17
</div>
`

exports[`Day #render when prop \`blockClassName\` is defined renders <Day /> 1`] = `
<div
  className="cal-day"
  onClick={[Function]}
  onMouseMove={[Function]}
>
  17
</div>
`

exports[`Day #render when prop \`today\` is different from prop \`date\` renders <Day /> 1`] = `
<div
  className="calendar-day"
  onClick={[Function]}
  onMouseMove={[Function]}
>
  2
</div>
`
